# terminusdb

./: terminusdb-storage-interface-analysis.md  xee-xot-integration-analysis.md  xot-indextree-interface-analysis.md  xpath-xquery-crate-analysis.md  xquery-performance-analysis.md
.github/workflows/: docker-publish.yml
docs/: terminusdb.1
src/cli/: main.pl
src/core/api/: api_info.pl
src/rust/: Cargo.toml
src/rust/terminusdb-community/: Cargo.toml
src/rust/terminusdb-community/src/: lib.rs
src/rust/terminusdb-community/src/graphql/: mod.rs
src/rust/terminusdb-store-prolog/: Cargo.toml
src/rust/terminusdb-store-prolog/src/: store.rs
